# somatic

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml  run_attn_pilot.sh  run_attn_pilot_v2.sh
docs/: ATTN_OPTIMIZATION.md  ATTN_OPTIMIZATION_LOG.md  ATTN_OPTIMIZATION_LOG_V2.md  attn_pilot_v2_summary.md
scripts/: cross_chain_attention.py  summarize_attn_pilot.py  summarize_attn_pilot_v2.py
src/somatic/: __init__.py  __main__.py  cli.py  tokenizer.py  train.py
src/somatic/configs/: README.md  config.yaml
src/somatic/configs/data/: default.yaml
src/somatic/configs/eval/: default.yaml
src/somatic/configs/log/: default.yaml
src/somatic/configs/masking/: default.yaml
src/somatic/configs/model/: base.yaml  large.yaml  small.yaml  xlarge.yaml
src/somatic/configs/train/: debug.yaml  (+1 more)
src/somatic/data/: __init__.py  collator.py  config.py  dataset.py  loader.py  transforms.py
src/somatic/encoding/: __init__.py  encoder.py  pooling.py
src/somatic/eval/: README.md  __init__.py  base.py  cross_chain_config.py  cross_chain_eval.py  evaluator.py  masking.py  per_position.py  region_config.py  region_eval.py  regions.py  registry.py
src/somatic/logging/: __init__.py  wandb_logger.py
src/somatic/masking/: __init__.py  masking.py
src/somatic/model/: __init__.py  attention.py  embeddings.py  ffn.py  layers.py  normalization.py  rope.py  transformer.py
src/somatic/training/: __init__.py  checkpoint.py  flops.py  masking_frequency.py  metrics.py  optimizer.py  trainer.py
src/somatic/utils/: __init__.py  config.py  progress.py  seed.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py  test_mlm_components.py  test_training_loop.py
tests/e2e/fixtures/: toy_data.csv
tests/integration/: test_cross_chain_eval_integration.py  test_data_pipeline.py  test_encoding.py  test_masking_pipeline.py  test_model_forward.py
tests/unit/: test_attention.py  test_checkpoint.py  test_collator.py  test_cross_chain_eval.py  test_data_config.py  test_dataset.py  test_embeddings.py  test_encoder.py  test_eval_masking.py  test_ffn.py  test_masking.py  test_masking_frequency.py  test_metrics.py  test_normalization.py  test_optimizer.py  test_per_position_optimization.py  test_pooling.py  test_region_config.py  test_region_metrics.py  test_regions.py  test_rope.py  test_tokenizer.py  test_transformer.py  test_transforms.py  test_utils.py
(+12 files in other folders)
