[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "somatic-lm"
dynamic = ["version"]
description = "A Python package for somatic language models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Bryan Briney" },
]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.scripts]
somatic = "somatic.cli:main"

[project.urls]
Homepage = "https://github.com/briney/somatic-lm"
Repository = "https://github.com/briney/somatic-lm"

[tool.hatch.build.targets.wheel]
packages = ["src/somatic"]

[tool.hatch.version]
path = "src/somatic/version.py"
